refactor: consolidate GlobalExceptionHandler and fix stock transfer logic
- Consolidate multiple exception handlers into a single GlobalExceptionHandler for consistency.
- Refactor stock transfer logic to ensure atomicity and correct inventory updates.
- Add LoggingLocalMessageService for standardized internal messaging and audit trails.
- SECURITY: Upgrade tools.jackson.core:jackson-core to 3.1.1 to fix CVE-2026-29062.
- SECURITY: Upgrade org.apache.tomcat.embed:tomcat-embed-core to 11.0.21 to fix CVE-2026-28154 (HTTP/2 DoS).
- SECURITY: Override AssertJ to 3.27.7 to address CVE-2026-24400.